bg color .jsfile

--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
   --font-primary:  'Rubik Beastly', cursive;
   --font-secondary: 'Mochiy Pop P One', sans-serif;
   --font-code:  'Mochiy Pop P One', sans-serif;
-  --bg-color: #1753c2;
-  --font-color: #000000;
+  --bg-color: #000000;
+  --font-color: #1fa1d4;
   --btn-bg-color: #1b0b0b;
   --accent-color: #33ff00;
   --header-shadow: rgb(0, 0, 0) 0px 0px 5px;
