--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   --font-secondary: 'Mochiy Pop P One', sans-serif;
   --font-code:  'Mochiy Pop P One', sans-serif;
   --bg-color: #000000;
-  --font-color: #1fa1d4;
+  --font-color: #8aff05;
   --btn-bg-color: #1b0b0b;
   --accent-color: #33ff00;
   --header-shadow: rgb(0, 0, 0) 0px 0px 5px;
