--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@
   --font-secondary: 'Mochiy Pop P One', sans-serif;
   --font-code:  'Mochiy Pop P One', sans-serif;
   --bg-color: #000000;
-  --font-color: #8aff05;
+  --font-color: #ffffff;
   --btn-bg-color: #1b0b0b;
-  --accent-color: #33ff00;
+  --accent-color: #a4ee2cd5;
   --header-shadow: rgb(0, 0, 0) 0px 0px 5px;
 }
 
