--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   --font-code:  'Mochiy Pop P One', sans-serif;
   --bg-color: #000000;
   --font-color: #ffffff;
-  --btn-bg-color: #1b0b0b;
+  --btn-bg-color: #960202;
   --accent-color: #ac1010d5;
   --header-shadow: rgb(255, 0, 0) 0px 0px 5px;
 }
