--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 :root {
   --font-primary:  'Comforter', cursive;
-  --font-secondary: 'Comforter', cursive;
+  --font-secondary: 'Rubik Mono One', sans-serif;
   --font-code:  'Comforter', cursive;
   --bg-color: #FFFDD0;
   --font-color: #880808;
