--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
   --font-code:  'Comforter', cursive;
   --bg-color: #FFFDD0;
   --font-color: #880808;
-  --btn-bg-color: #FFFDD0;
-  --accent-color: #ff0000d5;
+  --btn-bg-color: #ff0000d5;
+  --accent-color: #FFFDD0;
   --header-shadow: rgb(25, 12, 143) 0px 0px 5px;
 }
 
