--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   --bg-color: #FFFDD0;
   --font-color: #880808;
   --btn-bg-color: #FFFDD0;
-  --accent-color: #ff0000d5; 
+  --accent-color: #FFFDD0;
   --header-shadow: rgb(25, 12, 143) 0px 0px 5px;
 }
 
