--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   --btn-bg-color: #880808;
   --accent-color: #FFFDD0;
   --header-shadow: #880808;
-  --booch-color: #d67f7f;
+  --booch-color: #ff0000;
 }
 
 * {
@@ -32,13 +32,13 @@ body {
 .container {
   max-width: 960px;
   margin: 0 auto;
-  padding: 1rem 2rem;
+  padding: 1.5rem 1.5rem;
 }
 
 /* HEADER */
 
 header {
-  box-shadow: var(--header-shadow);
+  box-shadow: var(--booch-color);
 }
 
 header .container {
@@ -49,7 +49,7 @@ header .container {
 
 .menu {
   display: flex;
-  gap: 2rem;
+  gap: 2.5rem;
   align-items: center;
 }
 
@@ -66,7 +66,7 @@ header .container {
   font-size: 1rem;
   text-transform: capitalize;
   transition: all 0.3s ease;
-  box-shadow: 4px 4px 0 0 var(--accent-color);
+  box-shadow: 4px 4px 0 0 var(--booch-color);
   cursor: pointer;
   position: relative;
   text-decoration: none;
@@ -79,11 +79,11 @@ header .container {
 .wallet-btn {
   border-radius: 5rem;
   margin-left: 2rem;
-  border-color: transparent;
+  border-color: 1px 1px 0 0 var(--booch-color);
 }
 
 .hero-btn {
-  border-radius: 4px;
+  border-radius: 3px;
   font-size: 1.2rem;
   padding: 1.5rem 3rem;
 }
@@ -104,11 +104,11 @@ section {
 
 .countdown ul {
   display: flex;
-  gap: 2rem
+  gap: 1rem
 }
 .countdown .clock-item {
   list-style: none;
-  width: 70px;
+  width: 80px;
   height: auto;
 }
 .countdown .clock-item .count-number {
@@ -127,13 +127,13 @@ section {
 .countdown .clock-item .count-text {
   background: var(--btn-bg-color);
   font-family: var(--font-secondary);
-  font-size: 1.1rem;
+  font-size: 1rem;
   color: var(--bg-color);
   padding: 0.5rem 0.7rem;
   display: inline-block;
   width: 100%;
   text-align: center;
-  line-height: 1;
+  line-height: 2;
   border-radius: 0 0 4px 4px;
 }
 
